--- a/web/html/IC.html
+++ b/web/html/IC.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Instalación de Contendor LXC</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="css/estilo2.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="../css/estilo2.css" />
 </head>
 
 <body>
@@ -15,7 +15,7 @@
         <article id="creoCont">
             <div>
                 <h2>Como crear un contenedor:</h2>
-                <img id="imagen1" src="./imagenes/ProxmoxCT1.png" alt="proxmoxCT1" title="imagen 1" height="120" width="140">
+                <img id="imagen1" src="../imagenes/ProxmoxCT1.png" alt="proxmoxCT1" title="imagen 1" height="120" width="140">
                 <p> En Proxmox podemos crear dos cosas:<br>
                     <em>1. Máquinas Virtuales KVM. Se crean a partir de una ISO.</em><br>
                     <em>2. Contenedores.</em><br></p>
@@ -42,9 +42,9 @@
             <div class="texto">
                 <h2>Como iniciar contenedor:</h2>
                 <div id="imagen2">
-                    <img src="./imagenes/ProxmoxCT2.png" alt="proxmoxCT2" height="120" width="140">
+                    <img src="../imagenes/ProxmoxCT2.png" alt="proxmoxCT2" height="120" width="140">
 
-                    <img src="./imagenes/ProxmoxCT3.png" alt="proxmoxCT3" height="120" width="140">
+                    <img src="../imagenes/ProxmoxCT3.png" alt="proxmoxCT3" height="120" width="140">
                 </div>
                 <p> Para iniciar un contenedor, vamos al nodo en el que lo instalamos y al desplegarlo aparacerá. Lo
                     seleccionamos y con el click derecho desplegamos las opciones, entre ellas estará start. Si el
@@ -75,7 +75,7 @@
         <article id="usarApacheGit">
             <div>
                 <h2>Como usar Apache y git conjuntamente:</h2>
-                <img id="imagen4" src="./imagenes/ProxmoxCT5.png" alt="proxmoxCT1" height="120" width="140">
+                <img id="imagen4" src="../imagenes/ProxmoxCT5.png" alt="proxmoxCT1" height="120" width="140">
                 <p>
                     En la carpeta /var/www/html está el index de apache2. En está misma carpeta haremos un git pull de
                     nuestro repositorio y podremos acceder a el a través de la ip que asignamos al contenedor.
