--- a/web/html/IP.html
+++ b/web/html/IP.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Instalación de Proxmox VE</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="css/estilo2.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="../css/estilo2.css" />
 </head>
 
 <body>
@@ -16,12 +16,12 @@
 		   <div>
             <h2>Como instalar Proxmox</h2>
             <p>Lo instalamos tal que cualquier sistema Linux:</p>
-            <img src="./imagenes/ip.png" alt="insProxmox" height="120" width="140">
+            <img src="../imagenes/ip.png" alt="insProxmox" height="120" width="140">
             <p>Escogemos el idioma, el teclado y la zona horaria
             Ponemos una contraseña y un email
             ponemos la configuracion de red, la IP y el Gateway.
 			</p>
-            <img src="./imagenes/redProxmox.png" alt="redProxmox" height="120" width="140">
+            <img src="../imagenes/redProxmox.png" alt="redProxmox" height="120" width="140">
             <p>Reiniciamos y ya tendremos la instalacion hecha.</p>
 			
         </article>
@@ -30,9 +30,9 @@
             <h2>Como acceder a Proxmox:</h2>
 			<p>Para acceder a Proxmox usamos la IP que pusimos en la configuración de red de Proxmox y la ponemos en el
             navagador junto con el puerto 8006 y https://.</p>
-			<img src="./imagenes/inicio.png" alt="redProxmox" height="120" width="140">
+			<img src="../imagenes/inicio.png" alt="redProxmox" height="120" width="140">
             <p>La interfaz de Proxmox nos pedirá el nombre de usuario y contraseña y una vez introducido podremos acceder.</p>
-            <img src="./imagenes/inicio.png" alt="redProxmox" height="120" width="140">
+            <img src="../imagenes/inicio.png" alt="redProxmox" height="120" width="140">
             
 		   </div>
         </article>
