--- a/web/html/index.html
+++ b/web/html/index.html
@@ -52,7 +52,7 @@
 	</section>
 	<footer id="pie">
 		<img id="logoFoo" src="../imagenes/logo.png" alt="logoWP" >
-		<h3 id="titulo-pie">El rompecabezas de Proxmox VE - Asier, Victor, Vanesa y Jon Andoni.</h3>
+		<h3 id="titulo-pie">El rompecabezas de Proxmox VE - Asier, Victor y Jon Andoni.</h3>
 	</footer>
 </body>
 
