--- a/web/html/IP.html
+++ b/web/html/IP.html
@@ -13,28 +13,32 @@
     <section>
         <h1>Instalación de Proxmox VE</h1>
         <article id="insProx">
-		   <div>
-            <h2>Como instalar Proxmox</h2>
-            <p>Lo instalamos tal que cualquier sistema Linux:</p>
-            <img src="../imagenes/ip.png" alt="insProxmox" height="120" width="140">
-            <p>Escogemos el idioma, el teclado y la zona horaria
-            Ponemos una contraseña y un email
-            ponemos la configuracion de red, la IP y el Gateway.
-			</p>
-            <img src="../imagenes/redProxmox.png" alt="redProxmox" height="120" width="140">
-            <p>Reiniciamos y ya tendremos la instalacion hecha.</p>
-			
+            <div>
+                <h3>Como instalar Proxmox</h3>
+                <p>Lo instalamos tal que cualquier sistema Linux:</p>
+                <img src="../imagenes/ip.png" alt="insProxmox" height="120" width="140">
+                <p>Escogemos el idioma, el teclado y la zona horaria
+                    Ponemos una contraseña y un email
+                    ponemos la configuracion de red, la IP y el Gateway.
+                </p>
+                <img src="../imagenes/redProxmox.png" alt="redProxmox" height="120" width="140">
+                <br>
+                <br>
+                <p>Reiniciamos y ya tendremos la instalacion hecha.</p>
+
         </article>
         <article id="accProx">
-		   <div>
-            <h2>Como acceder a Proxmox:</h2>
-			<p>Para acceder a Proxmox usamos la IP que pusimos en la configuración de red de Proxmox y la ponemos en el
-            navagador junto con el puerto 8006 y https://.</p>
-			<img src="../imagenes/inicio.png" alt="redProxmox" height="120" width="140">
-            <p>La interfaz de Proxmox nos pedirá el nombre de usuario y contraseña y una vez introducido podremos acceder.</p>
-            <img src="../imagenes/inicio.png" alt="redProxmox" height="120" width="140">
-            
-		   </div>
+            <div>
+                <h3 id="CAP">Como acceder a Proxmox:</h3>
+
+                <p>Para acceder a Proxmox usamos la IP que pusimos en la configuración de red de Proxmox y la ponemos
+                    en el
+                    navagador junto con el puerto 8006 y https://.</p>
+                <img src="../imagenes/inicio.png" alt="redProxmox" height="120" width="140">
+                <p>La interfaz de Proxmox nos pedirá el nombre de usuario y contraseña y una vez introducido podremos
+                    acceder.</p>
+
+            </div>
         </article>
     </section>
 </body>
