--- a/web/html/index.html
+++ b/web/html/index.html
@@ -19,7 +19,7 @@
 
 		<nav id="navegador">
 			<ul id="lista">
-			<li id="desplegable-1" class="Encabezado">
+				<li id="desplegable-1" class="Encabezado">
 					<a class="Encabezado" target="iframe_a" href='./CP.html'>Configuración de Proxmox VE</a>
 					<ul id="lista-1">
 						<li><a target="iframe_a" href='./CP.html#necProx'>¿Que necesitamos para instalar el Proxmox?</a></li>
@@ -28,14 +28,14 @@
 						<li><a target="iframe_a" href='./CP.html#confServ'>Configurar MicroServidor para instalacion:</a></li>
 					</ul>
 				</li>
-			<li id="desplegable-2" class="Encabezado">
+				<li id="desplegable-2" class="Encabezado">
 					<a class="Encabezado" target="iframe_a" href='./IP.html'>Instalación de Proxmox VE</a>
 					<ul id="lista-2">
 						<li><a target="iframe_a" href='./IP.html#insProx'>Como instalar Proxmox:</a></li>
 						<li><a target="iframe_a" href='./IP.html#accProx'>Como acceder a Proxmox:</a></li>
 					</ul>
 				</li>
-			<li id="desplegable-3" >
+				<li id="desplegable-3">
 					<a class="Encabezado" target="iframe_a" href='./IC.html'>Instalación de Contendor LXC</a>
 					<ul id="lista-3">
 						<li><a target="iframe_a" href='./IC.html#creoCont'>Como crear un contenerdor:</a></li>
@@ -44,6 +44,10 @@
 						<li><a target="iframe_a" href='./IC.html#usarApacheGit'>Como usar Apache y git conjuntamente:</a></li>
 					</ul>
 				</li>
+				<li id="desplegable-4">
+					<a class="Encabezado" target="iframe_a" href='./Video.html'>Videotutorial</a>
+				</li>
+
 			</ul>
 		</nav>
 		<article id="articulo">
@@ -51,7 +55,7 @@
 		</article>
 	</section>
 	<footer id="pie">
-		<img id="logoFoo" src="../imagenes/logo.png" alt="logoWP" >
+		<img id="logoFoo" src="../imagenes/logo.png" alt="logoWP">
 		<h3 id="titulo-pie">El rompecabezas de Proxmox VE - Asier, Victor y Jon Andoni.</h3>
 	</footer>
 </body>
