--- a/web/html/index.html
+++ b/web/html/index.html
@@ -20,7 +20,7 @@
 		<nav id="navegador">
 			<ul id="lista">
 				<li id="desplegable-1" class="Encabezado">
-					<a class="Encabezado" target="iframe_a" href='./CP.html'>Configuración de Proxmox VE</a>
+					<a class="Encabezado" target="iframe_a" href='./CP.html'>Configuración del Servidor</a>
 					<ul id="lista-1">
 						<li><a target="iframe_a" href='./CP.html#necProx'>¿Que necesitamos para instalar el Proxmox?</a></li>
 						<li><a target="iframe_a" href='./CP.html#creoUsb'>¿Como creamos un USB booteable?</a></li>
