--- a/web/html/IP.html
+++ b/web/html/IP.html
@@ -14,18 +14,22 @@
         <h1>Instalación de Proxmox VE</h1>
         <article id="insProx">
             <div>
-                <h3>Como instalar Proxmox</h3>
-                <p>Lo instalamos tal que cualquier sistema Linux:</p>
-                <img src="../imagenes/ip.png" alt="insProxmox" height="120" width="140">
-                <p>Escogemos el idioma, el teclado y la zona horaria
-                    Ponemos una contraseña y un email
-                    ponemos la configuracion de red, la IP y el Gateway.
-                </p>
-                <br>
-                <img src="../imagenes/redProxmox.png" alt="redProxmox" height="120" width="140">
-                <br>
-                <p>Reiniciamos y ya tendremos la instalacion hecha.</p>
-
+                <div>
+                    <h3>Como instalar Proxmox</h3>
+                    <p>Lo instalamos tal que cualquier sistema Linux:</p>
+                    <img src="../imagenes/ip.png" alt="insProxmox" height="120" width="140">
+                    <p>Escogemos el idioma, el teclado y la zona horaria
+                        Ponemos una contraseña y un email
+                        ponemos la configuracion de red, la IP y el Gateway.
+                    </p>
+                </div>
+                <div>
+                    <br>
+                    <img src="../imagenes/redProxmox.png" alt="redProxmox" height="120" width="140">
+                    <br>
+                    <p>Reiniciamos y ya tendremos la instalacion hecha.</p>
+                </div>
+            </div>
         </article>
         <article id="accProx">
             <div>
@@ -34,7 +38,7 @@
                 <img src="../imagenes/inicio.png" alt="redProxmox" height="120" width="140">
                 <p>Para acceder a Proxmox usamos la IP que pusimos en la configuración de red de Proxmox y la ponemos
                     en el
-                    navagador junto con el puerto 8006 y https://.</p>
+                    navagador junto con el puerto 8006 y https://.</p><br>
                 <p>La interfaz de Proxmox nos pedirá el nombre de usuario y contraseña y una vez introducido podremos
                     acceder.</p>
 
